[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
test = false
bench = false
path = "day01/src/main.rs"

[[bin]]
name = "day02"
test = false
bench = false
path = "day02/src/main.rs"

[[bin]]
name = "day03"
test = false
bench = false
path = "day03/src/main.rs"
